[tool.poetry]
name = "station"
version = "0.1.0"
description = ""
authors = ["LewisCollum <lewiscollum4@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.91.0"
python-multipart = "^0.0.5"
uvicorn = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "station.main:start"